sdorfehs.1: Not sure why socket was capitalized

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -1162,7 +1162,7 @@ Default is
 Configuration file read at startup time, if present.
 .Pp
 .It Pa ~/.config/sdorfehs/control
-Unix Socket which accepts remote control commands sent by
+Unix socket which accepts remote control commands sent by
 .Nm Fl c .
 .Pp
 .It Pa ~/.config/sdorfehs/bar
