screen: Add a barbordercolor setting, default to black
This previously used fgcolor but now it can be something else.

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -869,10 +869,17 @@ The following variables are supported:
 Selects how thick the frame around
 .Nm Ap
 s
-prompt or message windows is.
+bar, prompt, and message windows is.
 .Pp
 Default is
 .Li 1 .
+.It Cm barbordercolor Ar color
+The color of the bar, prompt, and message windows
+.Nm
+creates.
+.Pp
+Default is
+.Li black .
 .It Cm bargravity Li nw | w | sw | n | c | s | ne | e | se
 Select the location where message and prompt bars appear.
 .Pp
