--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -162,6 +162,8 @@ Run after a frame actually switched, but before the window in it is
 focused.
 .It Cm switchscreen
 Run when the user switches to a different screen.
+.It Cm switchvscreen
+Run when the user switches to a different virtual screen.
 .It Cm switchwin
 Run after a new window is selected.
 (With dedication, it may already be inactive again, if it was put into
