actions: new commands vnext/vother/vprev to let use like groups
these will allow using vscreens to be used like groups were.  no attempt
to implement vmerge and friends, but vnext/vother/vprev are enough at
least for basic functionality.

it seems probable that these functions -- screen_last_vscreen(),
screen_next_vscreen(), screen_prev_vscreen() -- were put there to be
called but had not yet been linked to actual commands

by having vmove work with names (prior commit) and group next/prev/other
to have replacements, basic functionality from ratpoison is retained

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -745,7 +745,13 @@ Output version and compile time information.
 .It Ic vmove Oo Ar vscreen Oc
 Move the current window to the current frame on vscreen
 .Ar vscreen
-and switch to it.
+and switch to it.  Specify by either name or number.
+.It Ic vnext
+Switch to next vscreen.
+.It Ic vother
+Switch to the last-accessed vscreen before the current one.
+.It Ic vprev
+Switch to previous vscreen.
 .It Ic vrename
 Rename current vscreen.
 .It Ic vscreens
