actions: cmd_execw: new exec command waits for forked proc to exit
Normally it is not possible to sequence rcfile commands that run
programs, because 'exec' forks and does not wait for completion before
moving on to the next statement in rcfile.  This patch adds an 'execw'
command that will wait indefinitely for the shell to exit.  User should
use timeout(1) if they don't want to hang their window manager.

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -343,6 +343,18 @@ Spawn a shell executing
 .Ar shell\-command ,
 showing _NET_WM_PID supporting programs in the given frame instead of
 the frame selected when this program is run.
+.It Ic execw Ar shell\-command
+Spawn a shell executing
+.Ar shell\-command ,
+but wait for it to finish.  This should behave the same as
+.Ar exec
+but will wait for completion.  Use timeout(1) if it might hang, or
+.Nm
+will hang itself waiting for completion.  Use the 'exec' shell builtin as the
+first word in the command string to get similar behavior to
+.Ar execa
+owing to the forked pid remaining stable and known to
+.Nm .
 .It Ic fdump Op Ar screenno
 Output the defining data for all frames of the current screen, or
 for screen number
