actions: cmd_execv: new exec command starts in specific vscreen (#51)
This patch adds an 'execv' command that takes an initial arg to force
which vscreen to start the new window in.

We give spawn() an extra argument for what vscreen to use, rename it
vspawn() and then wrap it with a replacement spawn() that provides the
current vscreen, leaving existing behavior unchanged, and requiring no
modification of existing callers.

This still won't force the window of an unknown process (such as those
spawned using urxvtc -- which start with pids totally unknown to the
window manager and cannot be tracked by libXRes either) to start in a
certain vscreen, because the vscreen is stored in child proc which, once
mapped, is looked up by pid.

Using this is probably incompatible with 'winaddcurvscreen' set to 1,
and experimenting with setting it *after* execv commands, did not work
for some reason, I was unable to determine.

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -343,6 +343,13 @@ Spawn a shell executing
 .Ar shell\-command ,
 showing _NET_WM_PID supporting programs in the given frame instead of
 the frame selected when this program is run.
+.It Ic execv Ar vscreen shell\-command
+Spawn a shell within a specific vscreen
+.Ar vscreen ,
+executing
+.Ar shell\-command
+as in the 'exec' command (i.e., using "sh -c").  This is not likely to work
+well with 'winaddcurvscreen' set to 1 anywhere in the configuration file.
 .It Ic execw Ar shell\-command
 Spawn a shell executing
 .Ar shell\-command ,
