window: when adding to windowlist, use current vscreen if 'winaddcurvscreen' set (#38)
Add boolean rcvar 'winaddcurvscreen' (default 0).

In the specific case of a new window where the parent was originally
started in one vscreen, but spawns another window later when a different
vscreen is active, 'winvcur' will cause the new window to be added to
whatever the current vscreen at the time, rather than the ostensible
parent vscreen.

Default behavior (use parent's initial vscreen) is unchanged.

The original impetus for this patch was to fix use of 'urxvtc' with
'urxvtd', coming from old ratpoison "groups" and migrating to vscreens.
'urxvt' standalone already worked as expected: starting in the current
vscreen, since these are completely new processes.  However 'urxvtc' are
child windows all of the same urxvtd process.

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -995,6 +995,14 @@ Specify maximum number of values kept in input history.
 .Pp
 Default is
 .Li 20 .
+.It Cm winaddcurvscreen Li 0 | 1
+When set to
+.Pq Li 1 ,
+new windows will always start in whatever the current vscreen,
+ignoring vscreen of the origin process.
+.Pp
+Default is
+.Li 0 .
 .It Cm ignoreresizehints Li 0 | 1
 When set to
 .Pq Li 1 ,
